Bug 344564 - Dialog window asking for "folder to save notes" each time I receive a note or create a new one
Summary: Dialog window asking for "folder to save notes" each time I receive a note or...
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-25 18:51 UTC by Rafael Linux User
Modified: 2015-02-25 22:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.6
Sentry Crash Report:


Attachments
Folder selection for notes (35.61 KB, image/jpeg)
2015-02-25 18:55 UTC, Rafael Linux User
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2015-02-25 18:51:37 UTC
Knotes 4.14.4
In each session, Knotes ask me for a folder to save notes when receiving notes from other Knotes or when creating a new one, even after enabling "Use default folder" option.

Reproducible: Always

Steps to Reproduce:
1.Launch KDE (with Knotes launched automatically)
2.Create a new note (or receive a new one over local network)


Actual Results:  
A dialog window asking for folder to save notes appears.

Expected Results:  
Show a void note or the received note.

I try to attach image.
Comment 1 Rafael Linux User 2015-02-25 18:55:28 UTC
Created attachment 91294 [details]
Folder selection for notes
Comment 2 Laurent Montel 2015-02-25 22:31:21 UTC
Git commit 50e82b2f6debc9b83f7aeb0af04c697d83be1159 by Montel Laurent.
Committed on 25/02/2015 at 22:30.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 344564 - Dialog window asking for "folder to save notes" each time I receive a note or create a new one

FIXED-IN: 4.14.6

M  +3    -4    agents/notesagent/notesagent.cpp
M  +0    -1    knotes/CMakeLists.txt
M  +0    -1    knotes/apps/knotesapp.cpp
M  +1    -2    knotes/configdialog/knotecollectionconfigwidget.cpp
M  +3    -7    knotes/configdialog/knoteconfigdialog.cpp
D  +0    -61   knotes/settings/globalsettings.cpp
D  +0    -51   knotes/settings/globalsettings.h
M  +1    -2    kontact/plugins/knotes/knotes_part.cpp
M  +0    -1    noteshared/CMakeLists.txt
M  +1    -2    noteshared/config/notenetworkconfig.cpp
M  +3    -4    noteshared/job/createnewnotejob.cpp
M  +2    -2    noteshared/network/notehostdialog.cpp
D  +0    -63   noteshared/settings/globalsettings.cpp
D  +0    -52   noteshared/settings/globalsettings.h

http://commits.kde.org/kdepim/50e82b2f6debc9b83f7aeb0af04c697d83be1159