Fix Bug 344564 - Dialog window asking for "folder to save notes" each time I receive a note or create a new one

FIXED-IN: 4.14.6
BUG: 344564