agents/notesagent/notesagent.cpp
@@ -21,7 +21,6 @@
 #include "notesharedglobalconfig.h"
 #include "notesagentsettings.h"
 #include "notesagentsettingsdialog.h"
-#include "settings/globalsettings.h"
 
 #include <Akonadi/AgentInstance>
 #include <Akonadi/AgentManager>
@@ -132,7 +131,7 @@ void NotesAgent::setReceiveNotes(bool b)
 {
     if (NoteShared::NoteSharedGlobalConfig::receiveNotes() != b ) {
         NoteShared::NoteSharedGlobalConfig::setReceiveNotes(b);
-        NoteShared::GlobalSettings::self()->requestSync();
+        NoteShared::NoteSharedGlobalConfig::self()->writeConfig();
         mNotesManager->updateNetworkListener();
     }
 }
@@ -149,7 +148,7 @@ void NotesAgent::setPort(int value)
 
     if (NoteShared::NoteSharedGlobalConfig::port() != static_cast<uint>(value) ) {
         NoteShared::NoteSharedGlobalConfig::setPort(value);
-        NoteShared::GlobalSettings::self()->requestSync();
+        NoteShared::NoteSharedGlobalConfig::self()->writeConfig();
         if (NotesAgentSettings::enabled())
             mNotesManager->updateNetworkListener();
     }
@@ -162,7 +161,7 @@ void NotesAgent::setAlarmCheckInterval(int value)
 
     if (NoteShared::NoteSharedGlobalConfig::checkInterval() != static_cast<uint>(value) ) {
         NoteShared::NoteSharedGlobalConfig::setCheckInterval(value);
-        NoteShared::GlobalSettings::self()->requestSync();
+        NoteShared::NoteSharedGlobalConfig::self()->writeConfig();
         reload();
     }
 }
