apps/knotesapp.cpp
@@ -105,7 +105,6 @@ KNotesApp::KNotesApp()
       mDebugBaloo(false)
 {
     Akonadi::Control::widgetNeedsAkonadi(this);
-
     KNoteUtils::migrateToAkonadi();
 
     if (!qgetenv("KDEPIM_BALOO_DEBUG").isEmpty()) {
