configdialog/knoteconfigdialog.cpp
@@ -29,9 +29,7 @@
 #include "notesharedglobalconfig.h"
 #include "noteshared/config/noteactionconfig.h"
 #include "noteshared/config/notenetworkconfig.h"
-#include "noteshared/settings/globalsettings.h"
 #include "notesharedglobalconfig.h"
-#include "settings/globalsettings.h"
 
 #include "kdepim-version.h"
 
@@ -90,10 +88,8 @@ KNoteConfigDialog::~KNoteConfigDialog()
 }
 
 void KNoteConfigDialog::slotOk() {
-    GlobalSettings::self()->requestSync();
-    NoteShared::GlobalSettings::self()->requestSync();
-    NoteShared::GlobalSettings::self()->writeConfig();
-    GlobalSettings::self()->writeConfig();
+    NoteShared::NoteSharedGlobalConfig::self()->writeConfig();
+    KNotesGlobalConfig::self()->writeConfig();
 }
 
 
@@ -249,7 +245,7 @@ void KNoteMiscConfig::save()
 {
     KCModule::save();
     NoteShared::NoteSharedGlobalConfig::self()->setDefaultTitle(mDefaultTitle->text());
-    NoteShared::GlobalSettings::self()->requestSync();
+    NoteShared::NoteSharedGlobalConfig::self()->writeConfig();
 }
 
 void KNoteMiscConfig::defaults()
