noteshared/config/notenetworkconfig.cpp
@@ -17,7 +17,6 @@
 
 
 #include "notenetworkconfig.h"
-#include "settings/globalsettings.h"
 
 #include "notesharedglobalconfig.h"
 
@@ -93,7 +92,7 @@ void NoteNetworkConfigWidget::save()
     NoteShared::NoteSharedGlobalConfig::self()->setReceiveNotes(mTmpChkB->isChecked());
     NoteShared::NoteSharedGlobalConfig::self()->setSenderID(kcfg_SenderID->text());
     NoteShared::NoteSharedGlobalConfig::self()->setPort(kcfg_Port->value());
-    NoteShared::GlobalSettings::self()->requestSync();
+    NoteShared::NoteSharedGlobalConfig::self()->writeConfig();
 }
 
 void NoteNetworkConfigWidget::load()
